docs: refine phase 2 guide and align deps for Java 21